metadata/force-app/main/default/objects/CustomName_IggJK__c/CustomName_IggJK__c.object-meta.xml
<CustomObject>
    <description>Description_rwaCv</description>
    <label>CustomLabel_HyoJn</label>
    <nameField>
        <label>CustomLabel_HyoJn</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_HyoJns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>