metadata/force-app/main/default/objects/CustomName_IggJK__c/fields/CustomField_PsyEu__c.field-meta.xml
<CustomField>
    <fullName>CustomField_PsyEu__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldfMxCT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>