metadata/force-app/main/default/objects/CustomName_IggJK__c/fields/CustomField_thwrT__c.field-meta.xml
<CustomField>
    <fullName>CustomField_thwrT__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldlXymy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>